--- a/app/views/mass_rebuild/_first_step_rails4.html.erb
+++ b/app/views/mass_rebuild/_first_step_rails4.html.erb
@@ -1,8 +1,4 @@
-<h2>Mass Rebuild options</h2>
-<div style="height:20px;border:none;"></div>
-<div class='manage-tbl'>
-<% if Rails::VERSION::STRING < "4" %>
-    <% form_tag("/mass-rebuild/second-step", :method => "post") do %>
+    <%= form_tag("/mass-rebuild/second-step", :method => "post") do %>
       <table>
           <%= render :partial => 'mass_rebuild/fields/version' %>
           <%= render :partial => 'mass_rebuild/fields/repository' %>
@@ -12,13 +8,7 @@
           <%= render :partial => 'mass_rebuild/fields/distros' %>
           <div class='manage-tbl'>
           <%= render :partial => 'mass_rebuild/fields/clentry' %>
-          <input type="hidden" name="task_id" value="<%= params[:task_id] %>" />
       </table>
       <p/>
       <td colspan="2" style="text-align: right"><input name="next" type="submit" value="Next!" /></td>
     <% end %>
-<% else %>
-    <%= render 'mass_rebuild/first_step_rails4' %>
-<% end %>
-</div>
-<br/>
