--- a/app/views/packages/fields/_errata_form_rails4.html.erb
+++ b/app/views/packages/fields/_errata_form_rails4.html.erb
@@ -1,8 +1,6 @@
-<% if logged_in? && !@package.status.blank? && @package.status.name == 'Finished' && @package.can_be_shipped? %>
-    <span style="text-align: left;">
-    <% if Rails::VERSION::STRING < "4" %>
-        <% form_remote_tag(
-                   :url => {:controller => 'toolbox', :action => 'add_errata'},
+        <%= form_tag(
+                   {:controller => 'toolbox', :action => 'add_errata'},
+                   :remote => true,
                    :loading => "Element.show('spinner_errata_#{@package.id}');",
                    :success => "Element.hide('spinner_errata_#{@package.id}');
              ") do %>
@@ -10,8 +8,3 @@
             <%= submit_tag 'Add to Errata' %>
             <%= render :partial => 'layouts/progress_indicator', :locals => {:progress_indicator_id => "spinner_errata_#{@package.id}"} %>
       <% end %>
-    <% else %>
-        <%= render 'packages/fields/errata_form_rails4' %>
-    <% end %>
-    </span>
-<% end %>
