--- a/app/views/toolbox/_edit_ini_file_rails4.html.erb
+++ b/app/views/toolbox/_edit_ini_file_rails4.html.erb
@@ -1,7 +1,6 @@
-<div style="text-align: left;">
-<% if Rails::VERSION::STRING < "4" %>
-    <% form_remote_tag(
-        :url => {:controller => 'toolbox', :action => 'ini_file_ajax_req'},
+    <%= form_tag(
+        {:controller => 'toolbox', :action => 'ini_file_ajax_req'},
+        :remote => true,
         :loading => "Element.show('spinner_build_#{@package_id}');",
         :success => "Element.hide('spinner_build_#{@package_id}');") do %>
         <%= hidden_field_tag :package_id, @package_id %>
@@ -59,7 +58,3 @@
         <%= render :partial => 'layouts/progress_indicator',
             :locals => {:progress_indicator_id => "spinner_build_#{@package_id}"} %>
     <% end %>
-<% else %>
-    <%= render 'toolbox/edit_ini_file_rails4' %>
-<% end %>
-</div>
