--- a/app/views/toolbox/_edit_maven_build_arguments_file_rails4.html.erb
+++ b/app/views/toolbox/_edit_maven_build_arguments_file_rails4.html.erb
@@ -1,8 +1,6 @@
-<%= javascript_include_tag :defaults %>
-    <div style="text-align: left;">
-    <% if Rails::VERSION::STRING < "4" %>
-      <% form_remote_tag(
-                 :url => {:controller => 'toolbox', :action => 'maven_build_arguments_ajax_req'},
+      <%= form_tag(
+                 {:controller => 'toolbox', :action => 'maven_build_arguments_ajax_req'},
+                 :remote => true,
                  :loading => "Element.show('spinner_build_#{@package_id}');",
                  :success => "Element.hide('spinner_build_#{@package_id}');
              ") do %>
@@ -16,7 +14,3 @@
             <%= render :partial => 'layouts/progress_indicator',
                        :locals => {:progress_indicator_id => "spinner_build_#{@package_id}"} %>
       <% end %>
-    <% else %>
-        <%= render 'toolbox/edit_maven_build_arguments_file_rails4' %>
-    <% end %>
-    </div>
