--- a/app/views/toolbox/_press_build_button_rails4.html.erb
+++ b/app/views/toolbox/_press_build_button_rails4.html.erb
@@ -1,9 +1,6 @@
-<%= javascript_include_tag :defaults %>
-    <% if @error.nil? && @pac.task.active? %>
-        <div style="text-align: left;">
-        <% if Rails::VERSION::STRING < "4" %>
-          <% form_remote_tag(
-                     :url => {:controller => 'toolbox', :action => 'package_ajax_req'},
+          <%= form_tag(
+                     {:controller => 'toolbox', :action => 'package_ajax_req'},
+                     :remote => true,
                      :loading => "Element.show('spinner_build_#{@package_id}');",
                      :success => "Element.hide('spinner_build_#{@package_id}');
                  ") do %>
@@ -34,17 +31,3 @@
                 <%= render :partial => 'layouts/progress_indicator',
                            :locals => {:progress_indicator_id => "spinner_build_#{@package_id}"} %>
           <% end %>
-        <% else %>
-            <%= render 'toolbox/press_build_button_rails4' %>
-        <% end %>
-        </div>
-
-    <% else %>
-        <% unless @pac.task.active? %>
-            <p><%= 'Task is currently not active. You cannot build at the moment!' %></p>
-        <% end %>
-        <p><%= @error %></p>
-        <center>
-            <%= button_to_function 'Close', 'TINY.box.hide()' %>
-        </center>
-    <% end %>
