--- a/app/views/relationships/edit.html.erb
+++ b/app/views/relationships/edit.html.erb
@@ -20,25 +20,7 @@
       </p>
   <% end %>
 <% else %>
-  <%= form_for(@relationship) do |f| %>
-      <%= f.error_messages %>
-
-      <p>
-        <%= f.label :name %><br/>
-        <%= f.text_field :name %>
-      </p>
-      <p>
-        <%= f.label :is_global %><br/>
-        <%= f.text_field :is_global %>
-      </p>
-      <p>
-        <%= f.label :task_id %><br/>
-        <%= f.text_field :task_id %>
-      </p>
-      <p>
-        <%= f.submit 'Update' %>
-      </p>
-  <% end %>
+    <%= render 'relationships/edit_rails4' %>
 <% end %>
 
 <%= link_to 'Show', @relationship %> |
