--- a/app/views/workflows/new.html.erb
+++ b/app/views/workflows/new.html.erb
@@ -21,26 +21,7 @@
       </p>
   <% end %>
 <% else %>
-  <%= form_for(@workflow) do |f| %>
-      <%= f.error_messages %>
-
-      <p>
-        <%= f.label :name %><br/>
-        <%= f.text_field :name %>
-      </p>
-      <p>
-        <%= render :partial => 'workflows/start_status' %>
-      </p>
-      <p>
-        <%= render :partial => 'workflows/workflow_definitions' %>
-      </p>
-      <p>
-        <%= render :partial => 'workflows/assigned_tasks' %>
-      </p>
-      <p>
-        <%= f.submit 'Create' %>
-      </p>
-  <% end %>
+    <%= render 'workflows/new_rails4' %>
 <% end %>
 
 <%= link_to 'Back', workflows_path %>
