--- a/app/views/allowed_statuses/edit.html.erb
+++ b/app/views/allowed_statuses/edit.html.erb
@@ -21,25 +21,7 @@
     </p>
   <% end %>
 <% else %>
-  <%= form_for(@allowed_status) do |f| %>
-    <%= f.error_messages %>
-
-    <p>
-      <%= f.label :workflow_id %><br />
-      <%= f.text_field :workflow_id %>
-    </p>
-    <p>
-      <%= f.label :status_id %><br />
-      <%= f.text_field :status_id %>
-    </p>
-    <p>
-      <%= f.label :next_statuses %><br />
-      <%= f.text_area :next_statuses %>
-    </p>
-    <p>
-      <%= f.submit 'Update' %>
-    </p>
-  <% end %>
+    <%= render 'allowed_statuses/edit_rails4' %>
 <% end %>
 
 <%= link_to 'Show', @allowed_status %> |
