--- a/app/views/components/new.html.erb
+++ b/app/views/components/new.html.erb
@@ -16,20 +16,7 @@
       </p>
   <% end %>
 <% else %>
-  <%= form_for(@component) do |f| %>
-      <%= f.error_messages %>
-
-      <p>
-        <%= f.label :name %><br/>
-        <%= f.text_field :name %>
-      </p>
-      <p>
-          <%= render :partial => 'components/fields/tasks' %>
-      </p>
-      <p>
-        <%= f.submit 'Create' %>
-      </p>
-  <% end %>
+    <%= render 'components/new_rails4' %>
 <% end %>
 
 <%= link_to 'Back', components_path %>
