--- a/app/views/cronjob_modes/edit.html.erb
+++ b/app/views/cronjob_modes/edit.html.erb
@@ -19,23 +19,7 @@
   <% end %>
   </div>
 <% else %>
-  <div class='manage-tbl'>
-  <%= form_for(@cronjob_mode) do |f| %>
-    <%= f.error_messages %>
-
-    <p>
-      <%= f.label :mode %><br />
-      <%= f.text_field :mode %>
-    </p>
-    <p>
-      <%= f.label :description %><br />
-      <%= f.text_field :description %>
-    </p>
-    <p>
-      <%= f.submit 'Update' %>
-    </p>
-  <% end %>
-  </div>
+    <%= render 'cronjob_modes/edit_rails4' %>
 <% end %>
 
 <%= link_to 'Show', @cronjob_mode %> |
