--- a/app/views/cronjob_modes/new.html.erb
+++ b/app/views/cronjob_modes/new.html.erb
@@ -17,21 +17,7 @@
     </p>
   <% end %>
 <% else %>
-  <%= form_for(@cronjob_mode) do |f| %>
-    <%= f.error_messages %>
-
-    <p>
-      <%= f.label :mode %><br />
-      <%= f.text_field :mode %>
-    </p>
-    <p>
-      <%= f.label :description %><br />
-      <%= f.text_field :description %>
-    </p>
-    <p>
-      <%= f.submit 'Create' %>
-    </p>
-  <% end %>
+    <%= render 'cronjob_modes/new_rails4' %>
 <% end %>
 
 <%= link_to 'Back', cronjob_modes_path %>
