--- a/app/views/manual_log_entries/new.html.erb
+++ b/app/views/manual_log_entries/new.html.erb
@@ -20,25 +20,7 @@
     </p>
   <% end %>
 <% else %>
-  <%= form_for(@manual_log_entry) do |f| %>
-    <%= f.error_messages %>
-
-    <p>
-      <%= f.label :who %><br />
-      <%= f.text_field :who %>
-    </p>
-    <p>
-      <%= f.label :start_time %><br />
-      <%= f.datetime_select :start_time %>
-    </p>
-    <p>
-      <%= f.label :end_time %><br />
-      <%= f.datetime_select :end_time %>
-    </p>
-    <p>
-      <%= f.submit 'Create' %>
-    </p>
-  <% end %>
+    <%= render 'manual_log_entries/new_rails4' %>
 <% end %>
 
 <%= link_to 'Back', manual_log_entries_path %>
