--- a/app/views/p_attachments/edit.html.erb
+++ b/app/views/p_attachments/edit.html.erb
@@ -9,13 +9,7 @@
 	    </p>
 	<% end %>
 <% else %>
-  <%= form_for(@p_attachment) do |f| %>
-      <%= f.error_messages %>
-
-      <p>
-        <%= f.submit 'Update' %>
-      </p>
-  <% end %>
+    <%= render 'p_attachments/edit_rails4' %>
 <% end %>
 
 <%= link_to 'Show', @p_attachment %> |
