--- a/app/views/p_attachments/new.html.erb
+++ b/app/views/p_attachments/new.html.erb
@@ -9,13 +9,7 @@
 	    </p>
 	<% end %>
 <% else %>
-  <%= form_for(@p_attachment) do |f| %>
-      <%= f.error_messages %>
-
-      <p>
-        <%= f.submit 'Create' %>
-      </p>
-  <% end %>
+    <%= render 'p_attachments/new_rails4' %>
 <% end %>
 
 <%= link_to 'Back', p_attachments_path %>
