--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -17,17 +17,7 @@
 	    </p>
 	<% end %>
 <% else %>
-	<%= form_for(@tag) do |f| %>
-	    <%= f.error_messages %>
-
-	    <%= render :partial => 'key', :locals => {:f => f} %>
-	    <%= render :partial => 'value', :locals => {:f => f} %>
-	    <%= render :partial => 'task_id', :locals => {:f => f} %>
-
-	    <p>
-	      <%= f.submit 'Create' %>
-	    </p>
-	<% end %>
+    <%= render 'tags/new_rails4' %>
 <% end %>
 
 <%= link_to 'Back', tags_path %>
