--- a/app/views/task_groups/new.html.erb
+++ b/app/views/task_groups/new.html.erb
@@ -10,14 +10,7 @@
 	  </p>
 	<% end %>
 <% else %>
-	<%= form_for(@task_group) do |f| %>
-	  <%= f.error_messages %>
-
-	  <%= render :partial => 'task_groups/form', :locals => {:f => f} %>
-	  <p>
-	    <%= f.submit 'Create' %>
-	  </p>
-	<% end %>
+    <%= render 'task_groups/new_rails4' %>
 <% end %>
 
 <%= link_to 'Back', task_groups_path %>
