Minor fix due to bugs introduced when porting to Rails4

--- a/app/views/packages/_ops.html.erb
+++ b/app/views/packages/_ops.html.erb
@@ -1,11 +1,11 @@
-<% if has_task? && logged_in? && Task.find_by_name(unescape_url(params[:task_id])).read_only_task? %>
+<% if has_task? && logged_in? && !Task.find_by_name(unescape_url(params[:task_id])).read_only_task? %>
     <%= link_to 'New Package', :controller => :packages, :action => :new,
                 :task_id => params[:task_id] %> /
 <% end %>
 
 <%= link_to 'Search Packages', "/search/packages?task_id=#{ebtag}" %> /
 
-<% if has_task? && can_manage? && Task.find_by_name(unescape_url(params[:task_id])).read_only_task? %>
+<% if has_task? && can_manage? && !Task.find_by_name(unescape_url(params[:task_id])).read_only_task? %>
     <a href="/import/<%= escape_url(params[:task_id]) %>">Import Packages</a>
     / <a href="/import/<%= escape_url(params[:task_id]) %>?ac=update">Update Packages</a>
     /
