--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <%= javascript_include_tag 'jquery/dist/jquery.js' %>
   <%= javascript_include_tag 'filament-dialog/dialog.js' %>
   <%= javascript_include_tag 'tablesaw.js' %>
-  <% if Rails::VERSION::STRING > "2" %>
+  <% if Rails::VERSION::STRING > "3" %>
     <%= csrf_meta_tag %>
   <% end %>
 </head>
@@ -49,7 +49,11 @@
 </div>
 <%= render :partial => 'layouts/sep' %>
 
-<%= javascript_include_tag 'application' %>
+<% if Rails::VERSION::STRING < "4" %>
+    <%= javascript_include_tag :defaults %>
+<% else %>
+    <%= javascript_include_tag 'application' %>
+<% end %>
 <%= render :partial => 'layouts/regexp' %>
 <%= render :partial => 'layouts/application_js' %>
 <%= yield :js %>
