Rails4 add package info

--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -31,6 +31,6 @@
         <%= hidden_field_tag :package_id, package.id %>
     <% end %>
   <% else %>
-      <%= render 'comments/new_form_rails4' %>
+      <%= render 'comments/new_form_rails4', {:package => package} %>
   <% end %>
 </div>
