--- a/app/views/comments/_new_mini.html.erb
+++ b/app/views/comments/_new_mini.html.erb
@@ -27,6 +27,6 @@
       </div>
   <% end %>
 <% else %>
-    <%= render 'comments/new_mini_form_rails4' %>
+    <%= render 'comments/new_mini_form_rails4', {:package => package} %>
 <% end %>
 </div>
