--- a/app/views/packages/_log.html.erb
+++ b/app/views/packages/_log.html.erb
@@ -21,6 +21,6 @@
       </div>
   <% end %>
 <% else %>
-    <%= render 'packages/log_form_rails4' %>
+    <%= render 'packages/log_form_rails4', {:package => package} %>
 <% end %>
 </div>
