--- a/app/views/cronjob_modes/index.html.erb
+++ b/app/views/cronjob_modes/index.html.erb
@@ -14,8 +14,12 @@
     <% if can_manage? %>
         <td><%= link_to 'Show', cronjob_mode %></td>
         <td><%= link_to 'Edit', edit_cronjob_mode_path(cronjob_mode) %></td>
-        <td><%= link_to 'Destroy', cronjob_mode, :confirm => 'Are you sure?', :method => :delete %></td>
-    <% end %>
+	<% if Rails::VERSION::STRING < "4" %>
+       		<td><%= link_to 'Destroy', cronjob_mode, :confirm => 'Are you sure?', :method => :delete %></td>
+	<% else %>
+		<td><%= link_to 'Destroy', cronjob_mode, :data => {:confirm => 'Are you sure?'}, :method => :delete %></td>
+    	<% end %>
+	<% end %>
   </tr>
 <% end %>
 </table>
