Add version to show view

--- a/app/views/packages/show.html.erb
+++ b/app/views/packages/show.html.erb
@@ -15,6 +15,7 @@
         <%= render :partial => 'packages/show/created_by' %>
         <%= render :partial => 'packages/show/assignee' %>
         <%= render :partial => 'packages/show/created_at' %>
+        <%= render :partial => 'packages/show/ver' %>
         <%= render :partial => 'packages/show/last_modified_at' %>
         <%= render :partial => 'packages/show/status' %>
         <%= render :partial => 'packages/show/tags' %>
