Remove dependence on FormBuilder object
This object was mainly removed because the way you call it changed
between Rails 2 and Rails 4.

--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -3,13 +3,18 @@
 <div class='manage-tbl'>
   <form action="/users/reset_password/-1" method="post">
     <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>"/>
-    <% f = ActionView::Helpers::FormBuilder.new('task', @user, self, nil, nil) %>
-    <%= f.error_messages %>
     <table>
-      <%= render :partial => 'users/fields/email', :locals => {:f => f} %>
+      <tr>
+        <td align='right'>
+        <label>Email</label>
+        </td>
+        <td style="text-align: left;">
+          <input id="task_email" type="text" size="30" name="task[email]"></input>
+        </td>
+      </tr>
       <tr>
         <td colspan=2 style="text-align:right;">
-          <%= f.submit 'Reset Password' %>
+          <input id="task_submit" name="commit" type="submit" value="Reset Password" />
         </td>
       </tr>
     </table>
